# oraculus-bot

./: .aicodeprep-gui  .gitignore  LICENSE  Makefile  example_master_csv.txt  notebook_snippet.py  oraculus_bot.py  pyproject.toml  pyproject_toml.txt  readme.md  test_integration.py  test_oraculus_bot.py
src/oraculus_bot/: __init__.py  oraculus_bot.py
tests/e2e/utils/: create_users.md  create_users.zsh  sample.env  submit_from_python.py  zulip_client.py
tests/integration/: conftest.py  test_integration.py
tests/unit/: test_oraculus_bot.py
